# atSashas.Gallery

./: .gitignore  ADR-002-editor-context-control-plane.md  AUTH_MVP_SETUP.md  BACKEND_DEPENDENCIES_COMPLETE.md  CATALOG_INTEGRATION_COMPLETE.md  CLAUDE.md  COMPOSABLE_CONTENT_ARCHITECTURE.md  DEPENDENCY_DELETION_IMPLEMENTATION.md  DEVELOPMENT_BLOG.md  MAP.md  PROJECT_CONTEXT.md  SashaGallery.code-workspace  TESTING_CHECKLIST.md  TODO.md  agreements.md  audit_result.md  gpt.caddy  homepage_editor_plan.md  journey-instructions.md  roadmap.md  wave_1_report.mc
apps/admin-backend/: .Dockerfile.dev  Dockerfile  Project_TODO.md  gpt.md  pyproject.toml  routers.md  todo.md
apps/admin-backend/app/: deps.py  main.py  settings.py  storage.py
apps/admin-backend/app/auth/: dependencies.py  models.py  repository.py  schemas.py  security.py  session.py
apps/admin-backend/app/models/: art_item.py  art_shipment.py  block_collection.py  block_collections.py  catalog.py  catalog_repo.py  collection_repo.py  common.py  enrollments.py  event_pages.py  events.py  home_doc.py  images_pipline.py  media_items.py  public_stream.py  shipment.py  streams.py  text_visuals.py
apps/admin-backend/app/repos/: catalog_repo.py  collection_repo.py  event_repo.py  (+6 more)
apps/admin-backend/scripts/: hash_password.py
apps/admin-backend/tests/: conftest.py  test_blocks_api.py  test_enrollments_actions_api.py  test_enrollments_api.py  test_enrollments_detail_api.py  test_enrollments_overview_api.py  test_health.py  test_streams_api.py  test_unit_enrollment_model.py  test_unit_security.py  test_unit_utils.py
(+1032 files in other folders)
